Fix horizontal overflow on iPhone PWA

--- a/src/index.css
+++ b/src/index.css
@@ -21,12 +21,19 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow-x: hidden;
+  width: 100%;
+}
+
 body {
   background-color: #0a0b1a;
   color: #e8eaff;
   font-family: 'Inter', system-ui, -apple-system, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 /* Dot grid background pattern */
